fixed project list on mobile - should now collapse correctly

--- a/client/src/components/Project/Project.css
+++ b/client/src/components/Project/Project.css
@@ -59,6 +59,20 @@
 }
 
 
+
+/* PROJECT LIST MOBILE */
+
+@media only screen and (max-width: 600px) {
+  .project-text .title, .project-text .info, .project-text .description {
+    flex: 0 0 100%;
+    margin-bottom: 25px;
+  }
+  .project-footer {
+    display: none;
+  }
+}
+
+
 /* SCROLL / HOVER BEHAVIOR */
 
 .in-view {
@@ -107,6 +121,20 @@
   margin-top: 100px;
 }
 
+
+
+/* METRO */
+
+#metro * {
+  color: #2B2D30;
+}
+
+#metro .row {
+  margin-top: 100px;
+}
+
+
+
 /* KEYFRAMES */
 
 @keyframes textFadeUp {
@@ -129,15 +157,4 @@
     opacity: 1;
     transform: translateX(0);
   }
-}
-
-
-/* METRO */
-
-#metro * {
-  color: #2B2D30;
-}
-
-#metro .row {
-  margin-top: 100px;
 }
